# themis-pdl-protocol

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  quickstart_fig2.py  requirements.txt  verify_key_numbers.py
.github/workflows/: verify.yml
archive/legacy_repair/: README.md  aggregate_radial.py  build_radial_catalogues.py  paired_v2.py  recompute_archive_radial.py  recompute_subset_jbs.py
committed_outputs/run10_selection/: SELECTION_FUNNEL.txt  funnel_all.csv  funnel_contributing.csv
committed_outputs/run11_bz_confounder/: BZ_CONFOUNDER.txt
committed_outputs/run12_spectral/: SPECTRAL_SUMMARY.txt  spectral_metrics.csv
committed_outputs/run13_validation/: VALIDATION_STATUS.md  validation_status.csv
committed_outputs/run14_mechanism/: MECHANISM_PROBE.txt
committed_outputs/run15_subset_profile/: SUBSET_PROFILE.md  SUBSET_PROFILE.txt
committed_outputs/run16_dp_ordering/: DP_ORDERING.md  DP_ORDERING.txt
committed_outputs/run17_robustness/: ROBUSTNESS.txt
committed_outputs/run18_synthetic/: SYNTHETIC_INJECTION.txt  synthetic_per_encounter.csv
committed_outputs/run19_contrast_checks/: APPENDIX_E_SUPP.txt  CONTRAST_VALIDATION.txt  contrast_per_encounter.csv
committed_outputs/run20_regression/: RUN20_REGRESSION.txt
docs/: API.md  DATA.md  METHODS.md  PIPELINE_MAP.md  REPRODUCING.md  SCRIPT_REFERENCE.md  TUTORIAL.md
examples/: 01_one_encounter.py  02_classify_spectrum.py  03_bring_your_own_data.py  04_find_candidates.py  05_contrast_profile.py
scripts/figures/: psub.py  (+6 more)
tests/: test_core.py
tools/: get_data.py  seed_outputs.py
(+96 files in other folders)
